waitlist update